@@ -2511,3 +2511,4 @@ ui.zoom.ZoomTool.zoom-in-out = \u653E\u5927/\u7F29\u5C0F
 ui.AboutDialog.maximum-memory = \#T\:Maximum memory
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.create-database-primary-key=\#T\:Create a database Primary Key
 org.openjump.core.ui.plugin.datastore.postgis.PostGISSaveDriverPanel.primary_key=\#T\:Primary Key
+translator=Elton Chan
