@@ -2,6 +2,7 @@
 
 2013-09-28 mmichaud <michael.michaud@free.fr>
   * Go beyond the 2 Gb limitation fo dbf file reading
+  * Object attribute type can now be saved to dbf using toString()
 
 2013-08-20 ede
   * enhance image loading support
